    (Arpit Agarwal via suresh)

    MAPREDUCE-4843. When using DefaultTaskController, JobLocalizer not thread 
    safe. (kkambatl via tucu)

    MAPREDUCE-4967. TestJvmReuse fails on assertion. (kkambatl via tucu)

    MAPREDUCE-4434. Backport MR-2779 (JobSplitWriter.java can't handle large 
    job.split file) to branch-1. (kkambatl via tucu)

Release 1.1.2 - Unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    MAPREDUCE-4397. Introduce HADOOP_SECURITY_CONF_DIR for task-controller.
    (Yu Gao via llu)

    HDFS-4252. Improve confusing log message that prints exception when editlog 
    read is completed. (Jing Zhao via suresh)

  BUG FIXES

    MAPREDUCE-4798. Updated TestJobHistoryServer test case for startup
    race conditions.  (Sam Liu via eyang)

    HDFS-3727. When using SPNEGO, NN should not try to log in using KSSL
    principal. (atm)

    MAPREDUCE-2374. "Text File Busy" errors launching MR tasks. (Andy Isaacson
    via atm)

    HDFS-4208. NameNode could be stuck in SafeMode due to never-created
    blocks. (Brandon Li via suresh)

    HADOOP-9111. Change some JUnit 3 tests to JUnit 4 so that @Ignore tests can
    be run with ant 1.8.x.  (Jing Zhao via szetszwo)

    HADOOP-9115. Backport HADOOP-7082 and HDFS-1542: Configuration.writeXML
    should not hold lock while outputting and add a test for a deadlock writing
    Configuration to HDFS.  (Jing Zhao via szetszwo)

    HADOOP-8880. Missing jersey jars as dependency in the pom causes hive tests 
    to fail.  (gkesavan via mattf)

    MAPREDUCE-4478. Fixed a bug in TaskTracker's heartbeat to keep it under
    control. (Liyin Liang via vinodkv)

    MAPREDUCE-4696. Fixed a failing unit test - TestMRServerPorts
    (Gopal V via sseth)

    MAPREDUCE-4697. Fixed a failing unit test - TestMapredHeartbeat.
    (Gopal V via sseth)

    MAPREDUCE-4699. Fixed unit test failures - TestFairScheduler and 
    TestCapacityScheduler. (Gopal V via sseth)
